--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,11 +28,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Upgrade pip
+      run: python -m pip install -U pip setuptools wheel
+    - name: Install python dependencies
       run: |
-        python -m pip install --upgrade pip # setuptools wheel
         python -m pip install flake8 pytest
         pip install -r requirements.txt
+        pip install cython Cython
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
