--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,18 +28,20 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Upgrade pip
+      run: python -m pip install -U pip setuptools wheel
+    - name: Install python dependencies
       run: |
-        python -m pip install --upgrade pip # setuptools wheel
         python -m pip install flake8 pytest
         pip install -r requirements.txt
+        pip install cython Cython
+    - name: Test with pytest
+      run: |
+        pip install -e .
+        pytest .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. Line is 160 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=160 --statistics
-    - name: Test with pytest
-      run: |
-        pip install -e .
-        pytest
