--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Physics
-keywords = data-science,bivariate,statistics,streaming,numpy,vectorization
+keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 platforms = any
 
 [options]
