--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 description = Fast streaming bivariate statistics and t-test
 classifiers =
-  Development Status :: 4 - Beta
+  Development Status :: 5 - Production/Stable
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Intended Audience :: Financial and Insurance Industry
@@ -20,7 +20,7 @@ classifiers =
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Physics
-keywords = data-science,bivariate,statistics,streaming,numpy,vectorization
+keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 platforms = any
 
 [options]
