--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,14 @@
 [metadata]
+author          = Anton Kochepasov
+author-email    = akss@me.com
 description = Fast streaming bivariate statistics and t-test
+description-file = README.md
+long-description-content-type = text/markdown
+keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
+license = MIT
+platforms = any
+project_urls =
+    Source Code = https://github.com/akochepasov/statmoments/
 classifiers =
   Development Status :: 5 - Production/Stable
   Intended Audience :: Developers
@@ -20,8 +29,6 @@ classifiers =
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Physics
-keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
-platforms = any
 
 [options]
 zip_safe = False
