--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 author          = Anton Kochepasov
-author-email    = akss@me.com
+author_email    = akss@me.com
 description = Fast streaming bivariate statistics and t-test
-description-file = README.md
-long-description-content-type = text/markdown
+description_file = README.md
+long_description_content_type = text/markdown
 keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 license = MIT
 platforms = any
