--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,17 @@
 [metadata]
+name            = statmoments
 author          = Anton Kochepasov
 author_email    = akss@me.com
-description = Fast streaming bivariate statistics and t-test
-description_file = README.md
+description     = Fast streaming bivariate statistics and t-test
+long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 license = MIT
 platforms = any
 project_urls =
     Source Code = https://github.com/akochepasov/statmoments/
 classifiers =
   Development Status :: 5 - Production/Stable
+  Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Intended Audience :: Financial and Insurance Industry
@@ -29,15 +30,17 @@ classifiers =
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Physics
+keywords =
+    data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 
 [options]
 zip_safe = False
+packages = find:
 install_requires =
   h5py
   numpy
   scipy
   psutil
-
 setup_requires =
   cython
 
