--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name            = statmoments
-author          = Anton Kochepasov
-author_email    = akss@me.com
-description     = Fast streaming bivariate statistics and t-test
+name             = statmoments
+author           = Anton Kochepasov
+author_email     = akss@me.com
+license          = MIT
+platforms        = any
+description      = Fast streaming single-pass univariate/bivariate statistics and t-test
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = MIT
-platforms = any
 project_urls =
     Source Code = https://github.com/akochepasov/statmoments/
 classifiers =
