--- a/setup.cfg
+++ b/setup.cfg
@@ -45,12 +45,11 @@ setup_requires =
   cython
 
 [flake8]
-ignore = E111,E114,E226,E231,E241,E272,E221
+ignore = E111,E114,E221,E241,E272
 per-file-ignores =
 	__init__.py: F401
 	_statmoments_impl.py: F401
 	_native_shim.py:  E402,F401,F403
-	bench_bivar.py:   E121,E122,E201,E262,E265
   examples/bivar.py:  F841
   examples/univar.py: F841
 exclude =
