Multiple doc, pack and format improvements
 * Documentation
 * Packaging and pypi
 * Corrected flake errors
 Improved formatting (thanks Petr Gladkikh, @PetrGlad)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,17 @@
 [metadata]
-description = Fast streaming bivariate statistics and t-test
+name             = statmoments
+author           = Anton Kochepasov
+author_email     = akss@me.com
+license          = MIT
+platforms        = any
+description      = Fast streaming single-pass univariate/bivariate statistics and t-test
+long_description = file: README.md
+long_description_content_type = text/markdown
+project_urls =
+    Source Code = https://github.com/akochepasov/statmoments/
 classifiers =
   Development Status :: 5 - Production/Stable
+  Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Intended Audience :: Financial and Insurance Industry
@@ -20,8 +30,8 @@ classifiers =
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
   Topic :: Scientific/Engineering :: Physics
-keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
-platforms = any
+keywords =
+    data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
 
 [options]
 zip_safe = False
@@ -31,17 +41,15 @@ install_requires =
   numpy
   scipy
   psutil
-
 setup_requires =
   cython
 
 [flake8]
-ignore = E111,E114,E226,E231,E241,E272,E221
+ignore = E111,E114,E221,E241,E272
 per-file-ignores =
 	__init__.py: F401
 	_statmoments_impl.py: F401
 	_native_shim.py:  E402,F401,F403
-	bench_bivar.py:   E121,E122,E201,E262,E265
   examples/bivar.py:  F841
   examples/univar.py: F841
 exclude =
