--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
               runs-on: ubuntu-20.04
               python_platform: linux
             - name: macOS
-              runs-on: macos-latest
+              runs-on: macos-12
               python_platform: darwin
             - name: Windows
               runs-on: windows-latest
@@ -32,9 +32,8 @@ jobs:
       run: python -m pip install -U pip setuptools wheel
     - name: Install python dependencies
       run: |
-        python -m pip install flake8 pytest
+        python -m pip install flake8 pytest cython Cython
         pip install -r requirements.txt
-        pip install cython Cython
     - name: Test with pytest
       run: |
         pip install -e .
