--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,7 +19,7 @@ jobs:
               runs-on: macos-12
               python_platform: darwin
             - name: Windows
-              runs-on: windows-latest
+              runs-on: windows-2019
               python_platform: x64
 
     steps:
