--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6 ]
+        python-version: [ 3.6, 3.11 ]
         os:
             - name: Linux
               runs-on: ubuntu-20.04
@@ -22,17 +22,15 @@ jobs:
               python_platform: x64
 
     steps:
-    - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
+    - run: echo "The job triggered by ${{ github.event_name }}"
+    - run: echo "This job running on ${{ runner.os }}"
     - run: echo "The branch name ${{ github.ref }}"
 
-    - name: Checkout project
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
 
     - name: Cache pip
       uses: actions/cache@v3
@@ -42,13 +40,19 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
+    - name: Upgrade pip
+      run: python -m pip install -U pip setuptools wheel
+
     - name: Install python dependencies
       run: |
         pip install -r requirements.txt
+        pip install flake8 pytest coverage cython Cython
+
     - name: Test with pytest
       run: |
         pip install -e .
         pytest --durations=0 .
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
