--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Python Package
+name: Building Python Package
 
 on: [push]
 
@@ -44,14 +44,26 @@ jobs:
         pip install -r requirements.txt
         pip install flake8 pytest coverage cython Cython
 
-    - name: Test with pytest
-      run: |
-        pip install -e .
-        pytest --durations=0 .
-
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
         # exit-zero treats all errors as warnings. Line is 120 chars wide
         flake8 --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics .
+
+    - name: Test with pytest
+      run: |
+        pip install -e .
+        coverage run -m pytest --durations=0 .
+        coverage report -m
+        coverage xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      # env:
+      #   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: coverage.xml
+        flags: unittests
+        fail_ci_if_error: true  # Uncomment this if you want the CI to fail if Codecov upload fails
