Restored py 3.6 only

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.11 ]
+        python-version: [ 3.6 ]
         os:
             - name: Linux
               runs-on: ubuntu-20.04
