--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Python Package
+name: Building Python Package
 
 on: [push]
 
@@ -7,7 +7,6 @@ jobs:
     name: ${{ matrix.os.name }} ${{ matrix.python-version }}
     runs-on: ${{ matrix.os.runs-on }}
     strategy:
-      max-parallel: 4
       fail-fast: false
       matrix:
         python-version: [ 3.6 ]
@@ -16,31 +15,65 @@ jobs:
               runs-on: ubuntu-20.04
               python_platform: linux
             - name: macOS
-              runs-on: macos-12
+              runs-on: macOS-13
               python_platform: darwin
             - name: Windows
               runs-on: windows-2019
               python_platform: x64
 
     steps:
-    - uses: actions/checkout@v3
+    - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
+    - run: echo "The branch name ${{ github.ref }}"
+
+    - name: Checkout project
+      uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Upgrade pip
-      run: python -m pip install -U pip setuptools wheel
+        cache: 'pip'
+
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install python dependencies
       run: |
-        python -m pip install flake8 pytest cython Cython
         pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install -e .
-        pytest .
+        pip install flake8 pytest pytest-cov pytest-xdist coverage cython Cython setuptools wheel
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
         # exit-zero treats all errors as warnings. Line is 120 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+        flake8 --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics .
+
+    - name: Install and test with pytest
+      run: |
+        pip install -e .
+        pytest --durations=0 -n auto --dist loadfile --cov statmoments .
+        coverage report -m
+
+    - name: Generate and upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        flags: unittests
+        fail_ci_if_error: true  # CI fails if Codecov upload fails
+
+    # - name: Prepare python packages
+    #   run: |
+    #       python setup.py sdist bdist_wheel
+
+    # - name: Store the distribution packages
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: python-package-distributions
+    #     path: dist/
+    #     retention-days: 7
