--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ packages = find:
 # still supports legacy builds
 optional_dependencies =
   h5py
-  numpy<1.26
+  numpy>=1.17,<1.26
   scipy<=1.15
   psutil
 setup_requires =
