--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6 ]
+        python-version: [ 3.6, 3.12 ]
         os:
             - name: Linux
               runs-on: ubuntu-20.04
@@ -44,8 +44,10 @@ jobs:
 
     - name: Install python dependencies
       run: |
-        pip install -r requirements.txt
+        # Build dependencies
         pip install flake8 pytest pytest-cov pytest-xdist coverage cython Cython setuptools wheel
+        # Main dependencies
+        pip install -r requirements.txt
 
     - name: Lint with flake8
       run: |
@@ -54,7 +56,11 @@ jobs:
         # exit-zero treats all errors as warnings. Line is 120 chars wide
         flake8 --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics .
 
-    - name: Install and test with pytest
+    - name: Build the package
+      run: |
+        pip install -e .
+
+    - name: Run tests and generate coverage report
       run: |
         pip install -e .
         pytest --durations=0 -n auto --dist loadfile --cov statmoments .
