--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,17 +9,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.12 ]
+        # python-version: [ 3.6, 3.12 ]
+        python-version: [ 3.12 ]
         os:
           - name: Linux
             runs-on: ubuntu-20.04
             python_platform: linux
-          - name: macOS
-            runs-on: macOS-13
-            python_platform: darwin
-          - name: Windows
-            runs-on: windows-2019
-            python_platform: x64
+          # - name: macOS
+          #   runs-on: macOS-13
+          #   python_platform: darwin
+          # - name: Windows
+          #   runs-on: windows-2019
+          #   python_platform: x64
 
     steps:
       - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
