--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -151,8 +151,9 @@ jobs:
       - name: Build package
         run: python -m build
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: dist-${{ matrix.os }}-${{ matrix.python-version }}-${{ strategy.job-index }}
+          path: |
+            ./wheelhouse/*.whl
+            ./wheelhouse/*.tar.gz
