--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -157,3 +157,9 @@ jobs:
           path: |
             ./dist/*.whl
             ./dist/*.tar.gz
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: artifact
+          path: dist
