--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,77 +3,77 @@ name: Building Python Package
 on: [push]
 
 jobs:
-  build-test:
-    name: ${{ matrix.os.name }} ${{ matrix.python-version }}
-    runs-on: ${{ matrix.os.runs-on }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ 3.6, 3.12 ]
-        os:
-          - name: Linux
-            runs-on: ubuntu-20.04
-            python_platform: linux
-          - name: macOS
-            runs-on: macOS-13
-            python_platform: darwin
-          # - name: Windows
-          #   runs-on: windows-2019
-          #   python_platform: x64
+  # build-test:
+  #   name: ${{ matrix.os.name }} ${{ matrix.python-version }}
+  #   runs-on: ${{ matrix.os.runs-on }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       python-version: [ 3.6, 3.12 ]
+  #       os:
+  #         - name: Linux
+  #           runs-on: ubuntu-20.04
+  #           python_platform: linux
+  #         - name: macOS
+  #           runs-on: macOS-13
+  #           python_platform: darwin
+  #         # - name: Windows
+  #         #   runs-on: windows-2019
+  #         #   python_platform: x64
 
-    steps:
-      - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
-      - run: echo "The branch name ${{ github.ref }}"
+  #   steps:
+  #     - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
+  #     - run: echo "The branch name ${{ github.ref }}"
 
-      - name: Checkout project
-        uses: actions/checkout@v4
-        # with:
-        #   fetch-depth: 0
+  #     - name: Checkout project
+  #       uses: actions/checkout@v4
+  #       # with:
+  #       #   fetch-depth: 0
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+  #     - name: Set up Python ${{ matrix.python-version }}
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
+  #         cache: 'pip'
 
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+  #     - name: Cache pip
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.cache/pip
+  #         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pip-
 
-      - name: Install build-test dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # Build requirements
-          pip install flake8 pytest pytest-cov pytest-xdist coverage cython Cython setuptools wheel build
-          # Main requirements
-          pip install -r requirements.txt
+  #     - name: Install build-test dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         # Build requirements
+  #         pip install flake8 pytest pytest-cov pytest-xdist coverage cython Cython setuptools wheel build
+  #         # Main requirements
+  #         pip install -r requirements.txt
 
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
-          # exit-zero treats all errors as warnings. Line is 120 chars wide
-          flake8 --count --exit-zero --max-line-length=120 --max-complexity=10 --statistics .
+  #     - name: Lint with flake8
+  #       run: |
+  #         # stop the build if there are Python syntax errors or undefined names
+  #         flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
+  #         # exit-zero treats all errors as warnings. Line is 120 chars wide
+  #         flake8 --count --exit-zero --max-line-length=120 --max-complexity=10 --statistics .
 
-      - name: Build the package
-        run: |
-          pip install -e .
+  #     - name: Build the package
+  #       run: |
+  #         pip install -e .
 
-      - name: Run tests and generate coverage report
-        run: |
-          pytest --durations=0 -n auto --dist loadfile --cov=statmoments .
-          coverage report -m
+  #     - name: Run tests and generate coverage report
+  #       run: |
+  #         pytest --durations=0 -n auto --dist loadfile --cov=statmoments .
+  #         coverage report -m
 
-      - name: Generate and upload coverage to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
-          fail_ci_if_error: true
+  #     - name: Generate and upload coverage to Codecov
+  #       uses: codecov/codecov-action@v5
+  #       with:
+  #         token: ${{ secrets.CODECOV_TOKEN }}
+  #         flags: unittests
+  #         fail_ci_if_error: true
 
   # build_sdist:
   #   name: Build sdist
@@ -115,7 +115,7 @@ jobs:
 
   build-wheels:
     name: Wheels on ${{ matrix.os }} ${{ matrix.python-version }}
-    needs: build-test
+    # needs: build-test
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -152,16 +152,21 @@ jobs:
       - name: Build package
         run: python -m build
 
+      - name: Prepare artifacts
+        run: |
+          mkdir -p ~/artifacts
+          cp dist/*.whl ~/artifacts/
+
       - uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ matrix.os }}-${{ matrix.python-version }}-${{ strategy.job-index }}
+          # name: dist-${{ matrix.os }}-${{ matrix.python-version }}-${{ strategy.job-index }}
           path: |
-            dist
+            dist/*.whl
             !./dist/*.tar.gz
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: artifact
-          path: dist
-          merge-multiple: true
+      # - name: Download artifacts
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: artifact
+      #     path: dist
+      #     merge-multiple: true
