--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -157,14 +157,19 @@ jobs:
           mkdir -p ~/artifacts
           cp dist/*.whl ~/artifacts/
 
+
+  upload-wheels:
+    name:  Upload dir
+    needs: build-wheels
+    runs-on: ubuntu-20.04
+    steps:
       - uses: actions/upload-artifact@v4
         with:
-          # name: dist-${{ matrix.os }}-${{ matrix.python-version }}-${{ strategy.job-index }}
           path: |
-            dist/*.whl
+            artifacts/*.whl
             !./dist/*.tar.gz
 
-      # - name: Download artifacts
+# - name: Download artifacts
       #   uses: actions/download-artifact@v4
       #   with:
       #     name: artifact
