--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -149,34 +149,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install cython build setuptools wheel
 
-      - name: Build package
-        run: python -m build
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.22.0
 
-      - name: Prepare artifacts
-        run: |
-          mkdir -p ~/artifacts
-          cp dist/*.whl ~/artifacts/
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
 
-
-  upload-wheels:
-    name:  Upload dir
-    needs: build-wheels
-    runs-on: ubuntu-20.04
-    steps:
-    - name: List files
-      run: |
-        ls -lRF  ~/artifacts
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-          path: |
-            artifacts/*.whl
-            !./dist/*.tar.gz
-
-# - name: Download artifacts
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: artifact
-      #     path: dist
-      #     merge-multiple: true
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
