--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -149,13 +149,31 @@ jobs:
           python -m pip install --upgrade pip
           pip install cython build setuptools wheel
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.22.0
+      - name: Build package
+        run: python -m build
 
-      - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
-
-      - uses: actions/upload-artifact@v4
+      - name: Upload wheel artifacts
+        uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
+          name: wheel-${{ matrix.os }}-py${{ matrix.python-version }}
+          path: dist/*.whl
+          retention-days: 1
+
+  collect-wheels:
+    name: Collect all wheels
+    needs: build-wheels
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all wheels
+        uses: actions/download-artifact@v4
+        with:
+          pattern: wheel-*
+          path: all-wheels
+          merge-multiple: true
+
+      - name: Upload combined wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: all-wheels
+          path: all-wheels/*.whl
+
