--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -121,7 +121,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [ubuntu-20.04, macOS-13, windows-2019]
-        os: [ubuntu-20.04]
+        os: [ubuntu-20.04, macOS-13]
         python-version: [3.6, 3.12]
 
     steps:
@@ -162,7 +162,7 @@ jobs:
   collect-wheels:
     name: Collect all wheels
     needs: build-wheels
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Download all wheels
         uses: actions/download-artifact@v4
