--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,43 +75,43 @@ jobs:
   #         flags: unittests
   #         fail_ci_if_error: true
 
-  # build_sdist:
-  #   name: Build sdist
-  #   needs: build-test
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
+  build-sdist:
+    name: Build sdist
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.12'
-  #         cache: 'pip'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
 
-  #     - name: Install build dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install build wheel
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-  #     - name: Build package
-  #       run: python -m build
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install cython build setuptools wheel
 
-  #     - name: Install build dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install build wheel
+      - name: Build package
+        run: python -m build --sdist
 
-  #     - name: Build package
-  #       run: python -m build --sdist
-
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: dist
-  #         path: dist/
-
+      - name: Upload sdist artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sdist
+          path: dist/*.tar.gz
+          retention-days: 1
 
   build-wheels:
     name: Wheels on ${{ matrix.os }} ${{ matrix.python-version }}
@@ -159,10 +159,10 @@ jobs:
           path: dist/*.whl
           retention-days: 1
 
-  collect-wheels:
-    name: Collect all wheels
-    needs: build-wheels
-    runs-on: ubuntu-24.04
+  collect-artifacts:
+    name: Collect all artifacts
+    needs: [build-wheels, build-sdist]
+    runs-on: ubuntu-20.04
     steps:
       - name: Download all wheels
         uses: actions/download-artifact@v4
@@ -176,4 +176,3 @@ jobs:
         with:
           name: all-wheels
           path: all-wheels/*.whl
-
