--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -109,7 +109,6 @@ jobs:
       - name: Upload sdist artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: sdist
           path: dist/*.tar.gz
           retention-days: 1
 
@@ -168,11 +167,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: wheel-*
-          path: all-wheels
+          path: all-artifacts
           merge-multiple: true
 
       - name: Upload combined wheels
         uses: actions/upload-artifact@v4
         with:
-          name: all-wheels
-          path: all-wheels/*.whl
+          name: all-artifacts
+          path: all-artifacts/*.whl
