--- a/setup.cfg
+++ b/setup.cfg
@@ -35,10 +35,11 @@ keywords =
 [options]
 zip_safe = False
 packages = find:
-install_requires =
+# still supports legacy builds
+optional_dependencies =
   h5py
-  numpy
-  scipy
+  numpy>=1.17,<1.26
+  scipy<=1.15
   psutil
 setup_requires =
   cython
