packaging and yml

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,8 +7,30 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install test dependencies
+        run: |
+          # Build and test requirements
+          pip install --no-cache-dir flake8
+
+      - name: Lint with flake8
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
+          # exit-zero treats all errors as warnings
+          flake8 --count --exit-zero --max-line-length=120 --max-complexity=10 --statistics .
+
   build-sdist:
     name: Build sdist
+    needs: lint
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout project
@@ -46,7 +68,8 @@ jobs:
           retention-days: 1
 
   build-test-wheels:
-    name: ${{ matrix.python-version }} on ${{ matrix.os }} 
+    name: ${{ matrix.python-version }} on ${{ matrix.os }}
+    needs: lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -103,13 +126,6 @@ jobs:
         run: |
           pip install -e .
 
-      - name: Lint with flake8
-        run: |
-          # Stop the build if there are Python syntax errors or undefined names
-          flake8 --count --select=E9,F63,F7,F82 --show-source --statistics .
-          # exit-zero treats all errors as warnings
-          flake8 --count --exit-zero --max-line-length=120 --max-complexity=10 --statistics .
-
       - name: Run tests and generate coverage report
         run: |
           pytest --durations=0 -n auto --dist loadfile --cov=statmoments .
@@ -147,7 +163,7 @@ jobs:
           retention-days: 7
 
       - name: Delete intermediate artifacts
-        uses: geekyeggo/delete-artifact@v2
+        uses: geekyeggo/delete-artifact@v5
         with:
           name: |
             package-wheel-*
