--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "statmoments"
 version = "1.1.1"
-description = "Statistical moments calculation"
+description = "Streaming statistical moments"
 requires-python = ">=3.6"
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
@@ -44,6 +44,8 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Scientific/Engineering :: Image Processing",
     "Topic :: Scientific/Engineering :: Information Analysis",
@@ -59,8 +61,12 @@ dependencies = [
     # "pywin32;platform_system=='Windows'"
 ]
 
+[tool.setuptools.dynamic]
+version = {attr = "statmoments._version.__version__"}
+
 [project.urls]
 "Source Code" = "https://github.com/akochepasov/statmoments/"
+"Issues" = "https://github.com/akochepasov/statmoments/issues"
 
 # [project.optional-dependencies]
 # cuda = [
