--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macOS-13, windows-2019]
-        python-version: [3.6, 3.12]
+        python-version: ['3.6', '3.10', '3.12']
 
     steps:
       - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
