--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -103,16 +103,16 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython build setuptools wheel
+          pip install cython build setuptools wheel cibuildwheel
 
       - name: Build package ${{ matrix.os }} ${{ matrix.python-version }}
-        run: python -m build
+        run: python -m cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
         with:
           name: package-wheel-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: dist/*.whl
+          path: wheelhouse/*.whl
           retention-days: 1
 
       - name: Install test dependencies
