--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,9 +40,6 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-          cache: 'pip'
 
       - name: Cache pip
         uses: actions/cache@v3
@@ -68,14 +65,13 @@ jobs:
           retention-days: 1
 
   build-test-wheels:
-    name: ${{ matrix.python-version }} on ${{ matrix.os }}
+    name: Building on ${{ matrix.os }}
     needs: lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macOS-13, windows-2019]
-        python-version: ['3.6', '3.10', '3.12']
 
     steps:
       - run: echo "The job triggered by ${{ github.event_name }} on ${{ runner.os }}"
@@ -88,9 +84,6 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
 
       - name: Cache pip
         uses: actions/cache@v3
@@ -103,16 +96,16 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython build setuptools wheel
+          pip install cython build setuptools wheel cibuildwheel
 
-      - name: Build package ${{ matrix.os }} ${{ matrix.python-version }}
-        run: python -m build
+      - name: Build package ${{ matrix.os }}
+        run: python -m cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: package-wheel-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: dist/*.whl
+          name: package-wheel-${{ matrix.os }}
+          path: wheelhouse/*.whl
           retention-days: 1
 
       - name: Install test dependencies
