--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,9 @@ classifiers =
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
-  Topic :: Scientific/Engineering :: Artificial Intelligence
+  Programming Language :: Python :: 3.11
+  Programming Language :: Python :: 3.12
+Topic :: Scientific/Engineering :: Artificial Intelligence
   Topic :: Scientific/Engineering :: Image Processing
   Topic :: Scientific/Engineering :: Information Analysis
   Topic :: Scientific/Engineering :: Mathematics
